--- a/style.css
+++ b/style.css
@@ -85,13 +85,39 @@ html,body {
   text-align: center;
 }
 
+#contact-email {
+  font-weight: 500;
+}
+
 footer {
   height: 128px;
   background-color: #FFC7C7;
-  padding-top: 1%;
   margin: 0 0;
 }
 
+.fa {
+  padding-top: 10px;
+  font-size: 30px;
+  width: 50px;
+  height: 50px;
+  text-align: center;
+  text-decoration: none;
+}
+
+.fa-facebook {
+  background: #3B5998;
+  color: white;
+}
+
+.fa-instagram {
+  background: #125688;
+  color: white;
+}
+
+.fa-youtube {
+  background: #bb0000;
+  color: white;
+}
 
 
 .col-lg-8 {
