--- a/style.css
+++ b/style.css
@@ -55,12 +55,17 @@ figure {
     padding: 1rem;
 }
 
+
 html,body {
     width: 100%;
     height: 100%;
     margin: 0px;
     padding: 0px;
     overflow-x: hidden; 
+}
+
+#get-involved-btn {
+  margin-top: 10px;
 }
 
 #slide-area {
@@ -119,6 +124,27 @@ footer {
   color: white;
 }
 
+/* Stuff for sheets.html */
+
+#sheets-message {
+  background-color: #FAD61F;
+  color: black;
+  height: 430px;
+  padding-top: 2%;
+}
+
+.sheets-archive {
+  background-color: #F3F3F3;
+}
+
+.sheets-issues {
+  background-color: #F3F3F3;
+  border-bottom: 1px solid black;
+}
+
+#sheets-issues-bot {
+  background-color: #F3F3F3;
+}
 
 .col-lg-8 {
   margin: 0 0;
