--- a/style.css
+++ b/style.css
@@ -151,7 +151,7 @@ footer {
 }
 
 .sheet-info {
-  background-color: #f1f1f1;
+  background-color: #F3F3F3;
   margin: 0%;
 }
 
@@ -169,19 +169,14 @@ footer {
   padding-top: 2%;
   padding-left: 5%;
   margin: 0%; 
-  max-width: 40%;
+  //max-width: 40%;
 }
 
 #answer-sheet {
   background-color: #f1f1f1;
   padding-top: 2%;
   padding-left: 5%;
-}
-
-
-.sheets-issues {
-  background-color: white;
-  border-bottom: 1px solid black;
+  //max-width: 40%;
 }
 
 #sheets-issues-bot {
@@ -194,7 +189,7 @@ footer {
   border-color: #ff83da;
   font-weight: bold;
   letter-spacing: 0.05em;
-  margin-left: 12%;
+  margin-left: 9.5%;
 }
 
 .btn-colour-1:hover,
@@ -212,7 +207,97 @@ footer {
 }
 
 
+/*Activity sheets media query stuff*/
+@media only screen and (max-width: 1904px) {
+  .sheet-info {
+    min-width: 200px;
+  }
+}
+@media only screen and (max-width: 1799px) {
+  .sheet-info {
+    min-width: 190px;
+  }
+  .sheet-preview {
+    margin-left: 12%;
+    margin-bottom: 5%;
+  }
+  .btn-colour-1 {
+    margin-left: 33%;
+    margin-bottom: 5%;
+  }
+}
+@media only screen and (max-width: 1518px) {
+  .sheet-preview {
+    margin-left: 4%;
+    margin-bottom: 3%;
+  }
+  .btn-colour-1 {
+    margin-left: 30%;
+    margin-bottom: 3%;
+  }
+}
+@media only screen and (max-width: 1327px) {
+  .sheet-preview {
+    padding-right: 10%;
+    margin-bottom: 3%;
+  }
+  .btn-colour-1 {
+    margin-left: 30%;
+    margin-bottom: 3%;
+  }
+}
+@media only screen and (max-width: 1286px) {
+  .sheet-preview {
+    margin-left: 0%;
+    margin-bottom: 3%;
+    max-width: 100%;
+  }
+  .btn-colour-1 {
+    margin-left: 25%;
+    margin-bottom: 3%;
+  }
+}
+@media only screen and (max-width: 991px) {
+  .sheet-preview {
+    margin-left: 3%;
+    margin-bottom: 3%;
+    max-width: 100%;
+  }
+  .btn-colour-1 {
+    margin-left: 35%;
+    margin-bottom: 3%;
+  }
+}
+@media only screen and (max-width: 500px) {
+  .sheet-preview {
+    margin-left: 9%;
+    margin-bottom: 3%;
+    min-width: 400px;
+  }
+  .btn-colour-1 {
+    margin-left: 38%;
+    margin-bottom: 3%;
+  }
+}
 
+
+
+/*
+Extra small (xs) devices (portrait phones, less than 576px)
+No media query since this is the default in Bootstrap
+
+Small (sm) devices (landscape phones, 576px and up)
+@media (min-width: 576px) { ... }
+
+Medium (md) devices (tablets, 768px and up)
+@media (min-width: 768px) { ... }
+
+Large (lg) devices (desktops, 992px and up)
+@media (min-width: 992px) { ... }
+
+Extra (xl) large devices (large desktops, 1200px and up)
+@media (min-width: 1200px) { ... }
+*/
 
 
 
