--- a/style.css
+++ b/style.css
@@ -1,18 +1,5 @@
 
 
-
-/*---Media Queries --*/
-@media (max-width: 992px) {
-
-  }
-@media (max-width: 768px) {
-  
-}
-@media (max-width: 576px) {
-  
-}
-
-
 /*---Firefox Bug Fix --*/
 .carousel-item {
   transition: -webkit-transform 0.5s ease;
@@ -20,36 +7,10 @@
   transition: transform 0.5s ease, -webkit-transform 0.5s ease;
   -webkit-backface-visibility: visible;
   backface-visibility: visible;
+  transition-property: opacity;
 }
-/*--- Fixed Background Image --*/
-figure {
-  position: relative;
-  width: 100%;
-  height: 60%;
-  margin: 0!important;
-}
-.fixed-wrap {
-  clip: rect(0, auto, auto, 0);
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-}
-#fixed {
-  background-image: url('img/mac.png');
-  position: fixed;
-  display: block;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background-size: cover;
-  background-position: center center;
-  -webkit-transform: translateZ(0);
-          transform: translateZ(0);
-  will-change: transform;
-}
+
+
 /*--- Bootstrap Padding Fix --*/
 [class*="col-"] {
     padding: 1rem;
@@ -64,8 +25,14 @@ html,body {
     overflow-x: hidden; 
 }
 
-#get-involved-btn {
-  margin-top: 10px;
+/* Homepage */
+
+.main-page-img {
+  min-width: 1200px;
+  max-height: 500px;
+  object-fit: cover;
+  margin: 0%;
+  padding-right: 0%;
 }
 
 #slide-area {
@@ -77,17 +44,24 @@ html,body {
 
 .carousel-caption {
   color: black;
-  margin-bottom: 30%;
+  padding-bottom: 20%;
 }
 
-#about-us {
+.about-us {
   background-color: #F3F3F3;
-  height: 400px;
-  padding-top: 3%;
+  height: 470px;
+  padding-top: 4%;
+  padding-left: 12%;
+  padding-right: 12%;
+  padding-bottom: 2%;
 }
 
 #about-us-title, #about-us-text {
   text-align: center;
+}
+
+#about-us-text {
+  line-height: 20pt;
 }
 
 #contact-email {
@@ -201,6 +175,79 @@ footer {
   border-color: #2c2b28;
 }
 
+/* Meet the team page */
+
+.team-row {
+  background-color: #F3F3F3;
+  height: 350px;
+}
+
+.team-member {
+  padding-top: 1%;
+  align-items: center;
+}
+
+.headshot {
+  max-width: 170px;
+}
+
+.roles {
+  width: 35px;
+  height: 10px;
+  margin-left: auto;
+  margin-right: auto
+}
+
+.role-detail {
+  width: 135px;
+  height: 40px;
+  margin: 0;
+  text-align: center;
+  padding-top: 0.4%;
+  font-size: 15px;
+  color: white; 
+}
+
+.left-most {
+  margin-left: auto;
+}
+
+.right-most {
+  margin-right: auto;
+}
+
+.content-producer {
+  background-color: #ffbe0b;
+  margin-right: 0;
+}
+
+.volunteer {
+  background-color: #fb5607;
+  margin-left: 0;
+  margin-right: 0;
+}
+
+.video-editor {
+  background-color: #ff006e;
+  margin-left: 0;
+}
+
+.media-relations {
+  background-color: #8338ec;
+  margin-left: 0;
+}
+
+.tech {
+  background-color: #3a86ff;
+  margin-left: 0;
+}
+
+#meet-the-team-filler {
+  padding-top: 2%;
+  height: 205px;
+  background-color: #f3f3f3;
+}
+
 .col-lg-8 {
   margin: 0 0;
   padding: 0%;
@@ -279,25 +326,6 @@ footer {
     margin-bottom: 3%;
   }
 }
-
-
-
-/*
-Extra small (xs) devices (portrait phones, less than 576px)
-No media query since this is the default in Bootstrap
-
-Small (sm) devices (landscape phones, 576px and up)
-@media (min-width: 576px) { ... }
-
-Medium (md) devices (tablets, 768px and up)
-@media (min-width: 768px) { ... }
-
-Large (lg) devices (desktops, 992px and up)
-@media (min-width: 992px) { ... }
-
-Extra (xl) large devices (large desktops, 1200px and up)
-@media (min-width: 1200px) { ... }
-*/
 
 
 
