--- a/style.css
+++ b/style.css
@@ -16,7 +16,6 @@
     padding: 1rem;
 }
 
-
 html,body {
     width: 100%;
     height: 100%;
@@ -27,12 +26,18 @@ html,body {
 
 /* Homepage */
 
+.main-page-row {
+  height: auto;
+  padding: 0;
+}
+
 .main-page-img {
-  width: 1200px;
-  max-height: 500px;
-  object-fit: cover;
-  margin: 0%;
-  padding-right: 0%;
+  max-width: 100%;
+  height: auto;
+  width: auto;
+  max-height: 100%;
+  padding: 0;
+  float: right;
 }
 
 #slide-area {
@@ -49,7 +54,7 @@ html,body {
 
 .about-us {
   background-color: #F3F3F3;
-  height: 470px;
+  height: auto;
   padding-top: 4%;
   padding-left: 12%;
   padding-right: 12%;
@@ -251,8 +256,52 @@ footer {
   padding: 0%;
 }
 
+.team-outer-edge {
+  width: auto;
+}
 
-/*Activity sheets media query stuff*/
+
+/* Home page media query stuff */
+@media only screen and (max-width: 1478px) {
+  .carousel-caption {
+    padding-bottom: 15%;
+  }
+}
+@media only screen and (max-width: 1186px) {
+  .carousel-caption {
+    padding-bottom: 0%;
+  }
+}
+@media only screen and (max-width: 1025px) {
+  .carousel-caption {
+    height: auto;
+    width: auto;
+    padding-top: 20%;
+    padding-bottom: 10%;
+  }
+  .main-page-img {
+    height: 0px;
+    width: 0px;
+  }
+  .main-page-row {
+    height: 400px;
+  }
+  #carousel-caption-col {
+    min-width: 100%;
+    text-align: center;
+  }
+
+}
+
+/* Meet the Team media query stuff */
+@media only screen and (max-width: 180px) {
+  .team-outer-edge {
+    max-width: 9px;
+  }
+}
+
+
+/* Activity sheets media query stuff */
 @media only screen and (max-width: 1904px) {
   .sheet-info {
     min-width: 200px;
