--- a/style.css
+++ b/style.css
@@ -112,6 +112,10 @@ footer {
   padding-top: 2%;
 }
 
+#maintenance-message {
+  text-align: center;
+}
+
 .sheets-display {
   background-color: #FAD61F;
 }
