--- a/style.css
+++ b/style.css
@@ -103,7 +103,7 @@ footer {
   color: white;
 }
 
-/* Activity Sheets page */
+/* Activity Sheets Page */
 
 #sheets-message {
   background-color: #FAD61F;
@@ -188,7 +188,7 @@ footer {
   border-color: #2c2b28;
 }
 
-/* Meet the team page */
+/* Meet the Team Page */
 
 .team-row {
   background-color: #F3F3F3;
@@ -269,6 +269,13 @@ footer {
   padding: 0%;
 }
 
+/* Get Involved Page */
+
+#get-involved {
+  background-color: #f3f3f3;
+  text-align: center;
+  margin: 0%;
+}
 
 /* Home page media query stuff */
 @media only screen and (max-width: 1478px) {
