--- a/style.css
+++ b/style.css
@@ -27,10 +27,10 @@ html,body {
 /* Footer */
 
 footer {
-  height: 140px;
+  height: 120px;
   background-color: #FFC7C7;
   margin: 0%;
-  padding-top: 1%;
+  padding-top: 10px;
 }
 
 #follow {
