--- a/style.css
+++ b/style.css
@@ -111,7 +111,8 @@ footer {
 #sheets-message {
   background-color: #FAD61F;
   color: black;
-  height: 380px;
+  /*height: 380px;*/
+  height: 300px;
   padding-top: 30px;
 }
 
