--- a/style.css
+++ b/style.css
@@ -282,15 +282,6 @@ footer {
   margin: 0%;
 }
 
-/* Workshop Page */
-/*
-#workshop2{
-  width:100%;
-}
-#shop-pic{
-  width: 100%;
-}
-*/
 #workshop {
   background-color: #FAD61F;
   padding: 2% 15% 2% 15%;
@@ -301,13 +292,16 @@ footer {
   height: 500px;
   max-width: 600px;
   margin-right: 5%;
+  margin-top: 2%;
   background-color: #FAD61F;
 }
 
-#workshop-pics {
-  max-width: 900px;
-  height: 600px;
-  background-color: black;
+.workshop-pic {
+  max-width: 500px;
+}
+
+#workshop-pic-1 {
+  margin-bottom: 5%;
 }
 
 .partnerships {
@@ -417,11 +411,91 @@ footer {
   }
 }
 
+/* Workshops media query stuff */
+@media only screen and (max-width: 1415px) {
+  #workshop {
+    padding: 1% 10% 2% 10%;
+  }
+  .workshop-pic {
+    max-width: 400px;
+  }
+  #workshop-text {
+    max-width: 700px;
+    margin-top: 0%;
+  }
+}
+@media only screen and (max-width: 1230px) {
+  #workshop {
+    padding: 1% 2% 1% 2%;
+    min-height: 600px;
+  }
+  .partnerships {
+    height: 300px;
+  }
+  #logo-1 {
+    max-height: 120px;
+  }
+}
 
+@media only screen and (max-width: 1000px) {
+  #workshop {
+    min-height: 400px;
+  }
+  #workshop-text {
+    height: auto;
+    padding: 1% 1% 1% 1%;
+    margin: auto;
+  }  
+  #workshop-pics {
+    display: none;
+  }
+  .partnerships {
+    height: 250px;
+  }
+}
 
+@media only screen and (max-width: 840px) {
+  #workshop {
+    width: auto;
+    height: auto;
+  }
+  .partnerships {
+    padding-top: 5%;
+  }
+  #logo-1 {
+    height: 100px;
+  }
+}
 
-
-
+/*
+#workshop {
+  background-color: #FAD61F;
+  padding: 2% 15% 2% 15%;
+  margin: 0%;
+}
+#workshop-text {
+  height: 500px;
+  max-width: 600px;
+  margin-right: 5%;
+  background-color: #FAD61F;
+}
+.workshop-pic {
+  max-width: 500px;
+}
+#workshop-pic-1 {
+  margin-bottom: 5%;
+}
+.partnerships {
+  height: 400px;
+  margin: 0%;
+  padding-top: 2%;
+  background-color: #f3f3f3;
+}
+#logo-1 {
+  max-height: 150px;
+  margin: 3% 25% 0% 25%;
+}
+*/
 
 
 
